# assertion_gen

./: .gitignore  CLAUDE.md  README.md  SIGNAL_VALIDATION_FIX.md  STAGE3_SIMPLIFICATION.md  STAGE4_IMPLEMENTATION.md  SYNTAX_VALIDATION_FEEDBACK.md  VALIDATION_FALLBACK_FIX.md  config.py  example_loader.py  main.py  pyproject.toml  setup.bash  stage1.py  stage2.py  stage3.py  stage4.py  sv_validator.py
design/: ARBITER.sv  specification.md  specification_arbiter.md
docs/: README.md
output/: assertion_prompts.txt  formal_verification.sv  generated_assertions.sv  jaspergold_fpv.tcl  parameters.json  refined_assertions_progress.sv  test_testbench.sv
output/jgproject/: autosave_SWTFcJ.db
output/jgproject/.tmp/: .initCmds.tcl
output/jgproject/sessionLogs/session_0/: jg_session_0.cmd
output/jgproject/settings/: windowlayout.conf
